# clisweeper

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
src/: app.rs  event.rs  main.rs  ui.rs
