[package]
name = "clisweeper"
version = "1.0.0"
description = "cli client for minesweeper multiplayer"
authors = ["WithoutAName25 <withoutaname@withoutaname.eu>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/WithoutAName25/clisweeper"
homepage = "https://github.com/WithoutAName25/clisweeper"
keywords = ["minesweeper", "game", "client", "websocket", "cli"]
categories = ["games", "network-programming"]

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
color-eyre = "0.6.3"
minesweeper-client = "1.0.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
